# sp1-evm

./: README.md
elf/: riscv32im-succinct-zkvm-elf
program/: Cargo.toml
program/src/: main.rs
script/: Cargo.toml
