[package]
version = "0.1.0"
name = "fibonacci-program"
edition = "2021"

[dependencies]
alloy-sol-types = { workspace = true }
sp1-zkvm = "3.0.0-rc4"
fibonacci-lib = { path = "../lib" }
revm = { version = "12.1.0", features = [
    "std",
    "secp256k1",
    "blst",
], default-features = false }

[patch.crates-io]
secp256k1 = { git = "https://github.com/sp1-patches/rust-secp256k1", branch = "patch-secp256k1-v0.29.1" }
